Feature: add fonts. Update Gradient.

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Alegreya|Alegreya+Sans|Barlow|Barlow+Condensed|Cormorant+Garamond|EB+Garamond|Exo|Fira+Sans|Fira+Sans+Condensed|Lato|Libre+Franklin|Montserrat|Muli|Nunito|Overpass|Roboto+Condensed|Sarabun|Source+Sans+Pro:300,400,500,700"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.0/css/all.css" />
     <!--
